Updates from Overleaf

--- a/MERE 2022.tex
+++ b/MERE 2022.tex
@@ -21,11 +21,7 @@ Oriol Colomé Font}
 \maketitle              % typeset the header of the contribution
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-This meta-research analysis shines a spotlight on the inequality of opportunity in research careers and seeks to identify the areas receiving the most academic attention. In a world where social movements have underscored the need for increased diversity, equity, and inclusion, it is crucial to examine the existing literature on discrimination in academia. We focus on the most extensively researched factors of discrimination to discern where the majority of investigative efforts are channeled.
-
-Employing the SCOPUS database, we selected and analyzed a set of articles that addressed discrimination in academia. Our results highlight the preponderance of gender discrimination studies, reflecting over 75\% of the analyzed articles. However, we also noticed an increasing trend in studies on racial discrimination and other less-researched areas such as sexual orientation discrimination, ageism, and ableism.
-
-Our study underscores the importance of broadening the scope of academic investigation to other underrepresented areas of discrimination. Further, it advocates for the persistent push towards equality of opportunity in research careers.
+This meta-research analysis highlights the inequality of opportunity in research careers. It seeks to identify the areas receiving the most academic attention from a quantitative point of view. In a world where social movements have underscored the need for increased diversity, equity, and inclusion, examining the existing literature on discrimination in academia is crucial. We focus on the most extensively researched discrimination factors to discern where most investigative efforts are channeled. Employing the SCOPUS database, we selected and analyzed a set of articles that addressed discrimination in academia. Our results highlight the preponderance of gender discrimination studies, reflecting over 75\% of the analyzed articles. However, we also noticed an increasing trend in studies on racial discrimination and other less-researched areas, such as sexual orientation discrimination, ageism, and ableism. Our study underscores the importance of broadening the scope of academic investigation to other underrepresented areas of discrimination. Further, it advocates for the persistent push towards equality of opportunity in research careers.
 
 \keywords{Discrimination \and Inequality \and Equality \and Discrimination in Science \and Inequality in Science \and Research Career \and Meta-Research Analysis}
 \end{abstract}
@@ -34,11 +30,11 @@ Our study underscores the importance of broadening the scope of academic investi
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
-The recent upsurge of social protest movements such as \#MeToo \cite{joanpere2022history} and \#BlackLivesMatter \cite{nguyen2022black} have drawn global attention to the pressing issues of diversity, equity, and inclusion. These calls for systemic change resonate in all corners of society, including scientific institutions worldwide. Yet, while these institutions are critical drivers of innovation and progress, there are growing concerns that not all members of society have equal opportunities to participate and succeed in these settings. This systematic discrimination, defined as the unjust or prejudicial treatment of different categories of people, is an issue that merits rigorous scientific investigation.
+The recent upsurge of social protest movements such as \#MeToo \cite{joanpere2022history} and \#BlackLivesMatter \cite{nguyen2022black} have drawn global attention to the pressing issues of diversity, equity, and inclusion. These calls for systemic change resonate in all corners of society, including scientific institutions worldwide. Yet, while these institutions are critical drivers of innovation and progress, there are growing concerns that not all members of society have equal opportunities to participate and succeed in these settings as it is well-documented that various forms of discrimination persist in academia and research fields, often hindering the progress and careers of marginalized groups \cite{shor2015paper}. This systematic discrimination, defined as the unjust or prejudicial treatment of different categories of people, is an issue that merits rigorous scientific investigation.
 
-Given the significance of this issue, we have embarked on a meta-research analysis to understand better the dynamics of inequality of opportunity in scientific research careers. Our aim is to uncover the current state of affairs and reveal how the academic discourse on this topic has evolved over the past five years. This study's findings may be useful in informing policy interventions and stimulating further research.
+Given the significance of this issue, we have embarked on a meta-research analysis to understand better the dynamics of inequality of opportunity in scientific research careers. We aim to uncover the current state of affairs and reveal how the academic discourse on this topic has evolved over the past five years. This study's findings may be useful in informing policy interventions and stimulating further research.
 
-The significance of our research lies in its potential to provide a systematic review of the current state of the academic literature concerning inequality and discrimination in academic and research careers. It is well-documented that various forms of discrimination persist in academia and research fields, often hindering the progress and careers of marginalized groups \cite{shor2015paper}.
+The significance of our research lies in its potential to provide a systematic review of the current state of the academic literature concerning inequality and discrimination in academic and research careers. 
 
 \subsection{Research question(s)}
 Guiding our study are the following research questions:
@@ -61,7 +57,7 @@ Our analysis involved the selection and analysis of articles that met specific c
 Importantly, we defined our dataset beforehand to avoid introducing bias into our analysis.
 
 \subsection{Criteria for Inclusion and Analysis}
-Our focus primarily centered on understanding how these constructs intersect with academic and research careers. To establish our dataset, we employed specific criteria: articles were included if their titles or abstracts contained any of the terms: "\textbf{\textit{inequality}}", "\textbf{\textit{discrimination}}", "\textbf{\textit{equality}}", "\textbf{academic career}", or "\textbf{\textit{research career}}". This allowed us to create a comprehensive dataset that could adequately represent the breadth of existing literature on these issues.
+Our focus primarily centered on understanding how these constructs intersect with academic and research careers. To establish our dataset, we employed specific criteria: articles were included if their titles or abstracts contained any of the terms: "\textbf{\textit{inequality}}", "\textbf{\textit{discrimination}}", "\textbf{\textit{equality}}", "\textbf{academic career}", or "\textbf{\textit{research career}}". This allowed us to create a comprehensive dataset that adequately represents the breadth of existing literature on these issues.
 
 \subsubsection{SCOPUS QUERY}
 The following SCOPUS query was used to identify relevant articles:
@@ -83,9 +79,9 @@ Out of the total 284 articles that met our criteria for inclusion in the analysi
 
 Upon analyzing the remaining 38 articles, we identified additional forms of discrimination: socioeconomic conditions (14 articles), ageism (6 articles), and disability (5 articles). Despite thoroughly reviewing the remaining 13 articles, no new forms of discrimination emerged.
 
-While a lot of literature about different types of discrimination can be found, for example, HIV-related discrimination \cite{Murariu2021}, our search criteria didn't provide biased access to no new forms of such discrimination. It is important to note that our intention was not to exclude or silence other forms of discrimination that are equally important and deserve scholarly attention, but had to stick to strick step-by-step methodology to avoid bias.
+While a lot of literature about different types of discrimination can be found, for example, HIV-related discrimination \cite{Murariu2021}, our search criteria didn't provide biased access no new forms of such discrimination. It is important to note that our intention was not to exclude or silence other forms of discrimination that are equally important and deserve scholarly attention. Still, we had to stick to a strict step-by-step methodology to avoid bias.
 
-These results indicate that while gender and racial discrimination are widely studied in the context of academic research careers, other forms of discrimination, such as those based on sexual orientation, socioeconomic conditions, age, and disability, receive comparatively less attention. This answers our research questions by illustrating not only the existence of discrimination in academic research careers but also highlighting the currently understudied areas, revealing a need for more inclusive research efforts.
+These results indicate that while gender and racial discrimination are widely studied in the context of academic research careers, other forms of discrimination, such as those based on sexual orientation, socioeconomic conditions, age, and disability, receive comparatively less attention. This answers our research questions by illustrating the existence of discrimination in academic research careers and highlighting the currently understudied areas, revealing a need for more inclusive research efforts.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -110,6 +106,8 @@ Sexual orientation (\href{https://www.collinsdictionary.com/dictionary/english/s
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Tendency study}
 Regarding the tendency study, only 66,55\% of the articles found in SCOPUS were open access. Therefore, we only applied the quantitative analysis of the word occurrences on this ~67\% accessible sample.
+
+The results are displayed in \textbf{Table} \ref{tab3} as well as plotted in \textbf{Figure} \ref{chart}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{table}
 \caption{Number of Open Access PDF per year within selection}\label{tab2}
@@ -126,7 +124,6 @@ Year of publication & Open Access PDF\\
 \end{tabular}
 \end{table}
 
-The results are displayed in \textbf{Table}\textit{} \ref{tab3} as well as plotted in \textbf{Figure}\textit{} \ref{chart}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{table}
 \caption{Number of word occurrences per year of study within selection}\label{tab3}
@@ -147,7 +144,7 @@ heterosexual &0 &4 &6 &4 \\
 homosexual &2 &0 &0 &0 \\
 inequality &101 &79 &204 &184 \\
 lesbian &0 &12 &5 &6 \\
-lgtbq &0 &1 &0 &0 \\
+LGBTQ &0 &1 &0 &0 \\
 machismo &0 &0 &1 &0 \\old &18 &46 &53 &73 \\
 race &19 &99 &99 &102 \\
 racial &12 &24 &43 &75 \\
@@ -163,26 +160,79 @@ young &22 &123 &195 &204 \\
 \begin{figure}
 \includegraphics[width=\textwidth]{chart.png}
 \centering
-\caption{Number of word occurrences per year of study.} \label{chart}
+\caption{Number of word occurrences per year of study.} \label{fig:general_chart}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}
+\includegraphics[width=\textwidth]{2019.png}
+\centering
+\caption{Number of word occurrences in 2019 articles.} \label{fig:2019}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}
+\includegraphics[width=\textwidth]{2020.png}
+\centering
+\caption{Number of word occurrences in 2020 articles.} \label{fig:2020}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}
+\includegraphics[width=\textwidth]{2021.png}
+\centering
+\caption{Number of word occurrences in 2021 articles.} \label{fig:2021}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}
+\includegraphics[width=\textwidth]{2022.png}
+\centering
+\caption{Number of word occurrences in 2022 articles.} \label{fig:2022}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Discussion}
-Based on the analysis results, it is evident that the primary focus of study is gender discrimination, accounting for over 75% of all the analyzed articles. The yearly increasing trend in the number of articles studying this phenomenon underscores the heightened awareness and concern that researchers have toward gender inequality. The slight drop in 2022 does not seem significant and does not undermine the overall growing trend\ref{tab2}.
+The findings of our study align with previous research \cite{Popova2021}, \cite{Silander2022}, and \href{https://www.unesco.org/en/articles/unesco-research-shows-women-career-scientists-still-face-gender-bias}{reports}. Based on both the literature and the analysis results, it is evident that women career scientists still face gender bias and this looks like the primary focus of the study: gender discrimination, accounting for over 75\% of all the analyzed articles. The yearly increasing trend in articles studying this phenomenon might underscore researchers' heightened awareness and concern toward gender inequality. The slight drop in 2022 does not seem significant or undermine the overall growing trend \ref{tab2}.
 
-The distribution of articles has increased across all types of discrimination over the years, with a particularly notable rise in racial discrimination studies. This surge could be tied to the influence of movements such as \#BlackLivesMatter \cite{nguyen2022black}, demonstrating the impact of social movements on academic interests and research trends.
+The distribution of articles has increased across all types of discrimination over the years, with a particularly notable rise in racial discrimination studies, especially between 2021 and 2022. This surge could be tied to the influence of movements such as \#BlackLivesMatter \cite{nguyen2022black}, most likely demonstrating the impact of social movements on academic interests and research trends.
 
-Nevertheless, our analysis showed that some areas of discrimination, like sexual orientation, age, and disability, remain significantly under-represented in academic literature. This gap indicates potential areas for future research, with a need to broaden the understanding of discrimination experiences across various demographics within academia.
+Nevertheless, our analysis showed that some areas of discrimination, like sexual orientation or disability, remain significantly under-represented in academic literature. This gap indicates potential areas for future research, with a need to broaden the understanding of discrimination experiences across various demographics within academia.
 
 We also noted that institutional intervention plays a crucial role in addressing discrimination. However, the efficacy and impacts of such institutional efforts are not evenly distributed and require further investigation.
 
-A promising outlook is emerging, nonetheless. The future landscape of academia seems to be moving toward more diversity and inclusion, which is evident in the decreased gender gap among post-doc students as reported in recent studies \cite{https://doi.org/10.1111/gwao.12549}. Although the changes are more apparent among younger generations, they are expected to permeate throughout the university and research institutes gradually.
+A promising outlook is emerging, nonetheless. The future landscape of academia seems to be moving toward more diversity and inclusion, evident in the decreased gender gap among post-doc students as reported in recent studies \cite{https://doi.org/10.1111/gwao.12549}. Although the changes are more apparent among younger generations, they are expected to permeate the university and research institutes gradually.
 
-While our study provides insights into the prevalence of various forms of discrimination in academic research, it is not without limitations. Our analysis is primarily dependent on the availability and accessibility of open-access articles, which means some relevant studies might have been missed. Moreover, the analysis relies on the presence of specific keywords in titles and abstracts, which may not fully capture the nuanced discussions within the full text of the articles. Future research should consider these limitations and strive for more comprehensive and nuanced methods for analyzing trends in academic research on discrimination.
+While our study provides insights into the prevalence of various forms of discrimination in academic research, it is not without limitations. Our analysis is primarily dependent on the availability and accessibility of open-access articles, which means some relevant studies might have been missed. Moreover, the analysis relies on specific keywords in titles and abstracts, which may not fully capture the nuanced discussions within the full text of the articles. Future research should consider these limitations and strive for more comprehensive and nuanced methods for analyzing trends in academic research on discrimination.
 
+\section{Conclusions}
+
+\begin{itemize}
+  \item \textbf{Are there instances of discrimination when accessing a research career?}
+  \begin{itemize}
+      \item Yes, instances of discrimination when accessing a research career have been observed. The study of this phenomenon is particularly prominent in the form of gender discrimination, as it accounts for over 75\% of all analyzed articles. Other forms of discrimination include racial discrimination and, to a lesser extent, discrimination based on age, sexual orientation, or disability.
+  \end{itemize}
+
+  \item \textbf{What are this discrimination's potential causes or sources?}
+  \begin{itemize}
+      \item The potential causes or sources of discrimination are multifaceted. Institutional factors and societal biases play a significant role. This is evidenced by the prevalence of gender discrimination, which might be linked to entrenched societal gender biases. The surge in studies on racial discrimination, especially between 2021 and 2022, is likely influenced by social movements such as \#BlackLivesMatter, indicating the impact of wider societal trends and movements on academia.
+  \end{itemize}
+
+  \item \textbf{What trends or patterns have emerged over the past five years in the study of this phenomenon?}
+  \begin{itemize}
+      \item Over the past five years, there has been an increasing trend in articles studying gender discrimination, showing a heightened awareness and concern toward gender inequality in research careers. There has also been a notable rise in studies focusing on racial discrimination, particularly between 2021 and 2022. However, some areas of discrimination, like those based on sexual orientation or disability, remain significantly under-represented in academic literature. Despite these trends, a promising outlook is emerging, with the landscape of academia moving towards more diversity and inclusion, as evidenced by a decreasing gender gap among post-doc students.
+  \end{itemize}
+
+  \item \textbf{Potential Countermeasures}
+  \begin{itemize}
+      \item The research suggests that institutional intervention is crucial in addressing discrimination. However, it also indicates that the effectiveness of such efforts is uneven and requires further investigation. Future research should focus on studying underrepresented areas of discrimination and developing strategies to broaden the understanding of discrimination experiences across various demographics within academia. It should also strive for more comprehensive and nuanced methods for analyzing trends in academic research on discrimination, considering the limitations encountered in the present study.
+  \end{itemize}
+\end{itemize}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \nocite{*}
-\bibliographystyle{plainnat} % or any other style you like
+\bibliographystyle{plainnat}
 \bibliography{refs}
 
 \end{document}
